!74 增加功能：折叠框组件增加手风琴效果 * doc: 更新文档 * feat: 增加 Collapse-Item 正文渲染 * feat: 增加手风琴效果属性 * feat: 增加指示箭头 * style: 更新手风琴 Header 高度 * style: 格式化样式文档 * fix: 默认展开时属性不正确 * feat: 调整 UI 样式 * feat: 更改 Collapse 结构

--- a/src/BootstrapBlazor/wwwroot/css/bootstrap.blazor.css
+++ b/src/BootstrapBlazor/wwwroot/css/bootstrap.blazor.css
@@ -2695,36 +2695,36 @@ a {
         font-size: 14px;
     }
 
-.divider.divider-horizontal {
-    display: block;
-    height: 1px;
-    width: 100%;
-    margin: 1rem 0;
-}
-
-    .divider.divider-horizontal .divider-text.is-left {
-        left: 20px;
-        transform: translateY(-50%);
+    .divider.divider-horizontal {
+        display: block;
+        height: 1px;
+        width: 100%;
+        margin: 1rem 0;
     }
 
-    .divider.divider-horizontal .divider-text.is-center {
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-    }
+        .divider.divider-horizontal .divider-text.is-left {
+            left: 20px;
+            transform: translateY(-50%);
+        }
 
-    .divider.divider-horizontal .divider-text.is-right {
-        right: 20px;
-        transform: translateY(-50%);
-    }
+        .divider.divider-horizontal .divider-text.is-center {
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+        }
+
+        .divider.divider-horizontal .divider-text.is-right {
+            right: 20px;
+            transform: translateY(-50%);
+        }
 
 .divider-vertical {
     width: 1px;
     margin: 0 1rem;
 }
 
-    .divider.divider-vertical .divider-text {
-        padding: 20px 0;
-    }
+.divider.divider-vertical .divider-text {
+    padding: 20px 0;
+}
 
     .divider.divider-vertical .divider-text.is-left {
         top: 20px;
@@ -2759,3 +2759,30 @@ a {
         display: none;
     }
 /*end echart*/
+
+/*accordion*/
+.accordion .card-header {
+    padding: 6px;
+}
+
+.accordion .card-header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 0.5rem;
+}
+
+    .accordion .card-header-wrapper .fa-angle-down {
+        transition: transform .3s linear;
+    }
+
+    .accordion .card-header-wrapper .collapsed + .fa-angle-down {
+        transform: rotate(-90deg);
+    }
+
+.accordion .collapse-item {
+    font-size: 13px;
+    color: #303133;
+    line-height: 1.8;
+}
+/*end accordion*/
